--- a/src/layouts/Footer/Footer.css
+++ b/src/layouts/Footer/Footer.css
@@ -119,7 +119,8 @@
     }
 
     .button-list > li {
-        list-style: none
+        list-style: none;
+        color: black;
     }
 
     .button-list:hover {
